Refactor, sending new event to inventory to avoid retreive order info using inventory service